fix: broken UI in mobile view

--- a/src/components/AppLanding/Navbar/Navbar.scss
+++ b/src/components/AppLanding/Navbar/Navbar.scss
@@ -1,14 +1,9 @@
-.header-wrapper {
-  padding: 8px 16px;
-  height: 64px;
-  box-sizing: border-box;
-  background-color: rgba(255,255,255,.97);
-  box-shadow: 0px 2px 9px 0px rgba(0, 0, 0, 0.03);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
+.app-landing {
+  .landing-logo {
+    width: 48px;
+    height: 48px;
+    border-radius: 8px;
+  }
 
   .tagline {
     margin-top: 4px;
@@ -18,24 +13,6 @@
     a {
       color: black;
       text-decoration: none;
-    }
-  }
-
-  .landing-logo {
-    width: 48px;
-    height: 48px;
-    border-radius: 8px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .navbar-menu .menu-item {
-    .menu-text {
-      display: none;
-    }
-
-    .menu-icon {
-      width: 22px;
     }
   }
 }
